# DLAI-s2-2020-tutorials

./: .gitignore  README.md  README.rst  pyproject.toml
01/: 01.Tensors.ipynb  01_Tensor_basics.ipynb
02/: 02_Tensor_operations.ipynb
03/: 03_Linear_models_and_Pytorch_Datasets.ipynb
05/: 5_Autograd_and_Modules.ipynb
