[tool.poetry]
name = "DLAI-s2-2020-tutorials"
version = "0.1.0"
description = "Lab sessions of the DLAI course"
authors = ["Luca Moschella <moschella@di.uniroma1.it>", "Antonio Norelli <norelli@di.uniroma1.it>"]

[tool.poetry.dependencies]
python = "^3.7.5"
jupyter = "^1.0.0"
ipython = "^7.12.0"
RISE = "^5.6.1"
torch = "^1.4.0"
torchvision = "^0.5.0"
matplotlib = "^3.1.3"
plotly = "^4.5.1"
jupyter_contrib_core = "^0.3.3"
jupyter_contrib_nbextensions = "^0.5.1"
scikit-image = "^0.16.2"
pandas = "^1.0.1"
wandb = "^0.8.36"
pytorch-lightning = "^0.7.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
